Refactorizacion de Repositorios y accesos a BD, cambiando 'Cantidad' por su valor correspondiente, creados Body para cada tipo de llamada para diseñar graficos, comprobado correcto funcionamiento de llamadas y manejos con Body
