# models/body.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class Body(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, Anio: int=None, Cantidad: int=None):
+        """
+        Body - a model defined in Swagger
+
+        :param Anio: The Anio of this Body.
+        :type Anio: int
+        :param Cantidad: The Cantidad of this Body.
+        :type Cantidad: int
+        """
+        self.swagger_types = {
+            'Anio': int,
+            'Cantidad': int
+        }
+
+        self.attribute_map = {
+            'Anio': 'Anio',
+            'Cantidad': 'Cantidad'
+        }
+
+        self._Anio = Anio
+        self._Cantidad = Cantidad
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Body':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The body of this Body.
+        :rtype: Body
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def Anio(self) -> int:
+        """
+        Gets the Anio of this Body.
+
+        :return: The Anio of this Body.
+        :rtype: int
+        """
+        return self._Anio
+
+    @Anio.setter
+    def Anio(self, Anio: int):
+        """
+        Sets the Anio of this Body.
+
+        :param Anio: The Anio of this Body.
+        :type Anio: int
+        """
+
+        self._Anio = Anio
+
+    @property
+    def Cantidad(self) -> int:
+        """
+        Gets the Cantidad of this Body.
+
+        :return: The Cantidad of this Body.
+        :rtype: int
+        """
+        return self._Cantidad
+
+    @Cantidad.setter
+    def Cantidad(self, Cantidad: int):
+        """
+        Sets the Cantidad of this Body.
+
+        :param Cantidad: The Cantidad of this Body.
+        :type Cantidad: int
+        """
+
+        self._Cantidad = Cantidad
+
