# models/datos.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class Datos(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, anio: int=None, cantidad: int=None):
+        """
+        Datos - a model defined in Swagger
+
+        :param anio: The anio of this Datos.
+        :type anio: int
+        :param cantidad: The cantidad of this Datos.
+        :type cantidad: int
+        """
+        self.swagger_types = {
+            'anio': int,
+            'cantidad': int
+        }
+
+        self.attribute_map = {
+            'anio': 'anio',
+            'cantidad': 'cantidad'
+        }
+
+        self._anio = anio
+        self._cantidad = cantidad
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Datos':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Datos of this Datos.
+        :rtype: Datos
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def anio(self) -> int:
+        """
+        Gets the anio of this Datos.
+
+        :return: The anio of this Datos.
+        :rtype: int
+        """
+        return self._anio
+
+    @anio.setter
+    def anio(self, anio: int):
+        """
+        Sets the anio of this Datos.
+
+        :param anio: The anio of this Datos.
+        :type anio: int
+        """
+
+        self._anio = anio
+
+    @property
+    def cantidad(self) -> int:
+        """
+        Gets the cantidad of this Datos.
+
+        :return: The cantidad of this Datos.
+        :rtype: int
+        """
+        return self._cantidad
+
+    @cantidad.setter
+    def cantidad(self, cantidad: int):
+        """
+        Sets the cantidad of this Datos.
+
+        :param cantidad: The cantidad of this Datos.
+        :type cantidad: int
+        """
+
+        self._cantidad = cantidad
+
